fix from breaking change, button on mobile should be outline adding a media query

--- a/src/stylesheets/components/_header.sass
+++ b/src/stylesheets/components/_header.sass
@@ -25,7 +25,8 @@
   &:not(.header--sticky)
     .nav--secondary, .nav--landing-page
       .nav__link
-        background: $white
+        @media (min-width: $smallDesktop)
+          background: $white
 
   &--sticky
     backdrop-filter: blur(30px)
